syntax = "proto3";

package sf.antelope.transform.v1;
option go_package = "github.com/EOS-Nation/firehose-antelope/types/pb/sf/ethereum/transform/v1;pbtransform";

// CombinedFilter is a combination of "LogFilters" and "CallToFilters"
//
// It transforms the requested stream in two ways: 
//   1. STRIPPING
//      The block data is stripped from all transactions that don't
//      match any of the filters.  
//
//   2. SKIPPING
//      If an "block index" covers a range containing a
//      block that does NOT match any of the filters, the block will be
//      skipped altogether, UNLESS send_all_block_headers is enabled
//      In that case, the block would still be sent, but without any
//      transactionTrace
//
// The SKIPPING feature only applies to historical blocks, because
// the "block index" is always produced after the merged-blocks files
// are produced. Therefore, the "live" blocks are never filtered out.
//
message Filter {
  repeated ActionFilter action_filters = 1;

  // Always send all blocks. if they don't match any log_filters or call_filters, 
  // all the transactions will be filtered out, sending only the header.
  bool send_all_block_headers = 3;
}

message ActionFilter {
  uint64 account = 1; // namespace of the action, for example "eosio.token"
  uint64 action = 2;  // name of the action, for example "transfer"
}

message LightBlock {
}
